syntax = "proto3";

package drillbit.protobuf;

message GeneralClassifier {
  bool dense = 1;
  int32 dims = 2;
  bytes weights = 3;
}

message BinaryClassifier {
  bool dense = 1;
  int32 dims = 2;
  bytes weights = 3;
}

message MulticlassClassifier {
  bool dense = 1;
  int32 dims = 2;
  repeated LabelAndWeights label2Weights = 3;

  message LabelAndWeights {
    string label = 1;
    bytes weights = 2;
  }
}

message KNNBinaryClassifier {
  bool dense = 1;
  bytes coordinates = 3;
}

message KNNMulticlassClassifier {
  bool dense = 1;
  repeated LabelAndCoordinates label2Coordinates = 2;

  message LabelAndCoordinates {
    string label = 1;
    bytes coordinates = 2;
  }
}